Removing fade on modal body overflow as it cause issues in non-webkit browsers

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1044,17 +1044,6 @@ footer {
     z-index: 99999;
     position: absolute;
     .box-shadow(0 15px 8px -10px rgba(0,0,0,0.5));
-    &:after {
-      content:'';
-      display:block;
-      height:50px;
-      width:100%;
-      position: absolute;
-      bottom:0;
-      left:0;
-      .box-shadow(inset 0 -20px 50px -15px #1f2222);
-      z-index: 100;
-    }
     h3 {
       font-family: @serifFontFamily;
       .font-size(14);
