--- a/app/styles/responsive.less
+++ b/app/styles/responsive.less
@@ -695,9 +695,6 @@
         &.fade.in {
           top:0;
         }
-        &:after {
-          display:none;
-        }
         ul {
           padding:8px 12px 20px;
           li {
